PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts_Graph: Further graphing improvements

Phoronix Test Suite 5.2 Milestone 4
29 May 2014

- pts-core: Always report the CPU scaling governor to the system table
- pts-core: Add auto-sort-result-file option
- phoromatic: Improve the systems' page
- phoromatic: Allow up to three connection failures before quitting
- pts_Graph: Improved, cleaner, and more accurate rendering of the pts_OverViewGraph
- pts_Graph: Make the horizontal box chart graph in good shape
- pts_Graph: Revert earlier render_graph_value_ticks() change by mufasa72 as it produced inaccurate tick values
- pts_Graph: use the horizontal box plot when rendering frame times for large number of results
- pts_Graph: Various other graphing improvements

Phoronix Test Suite 5.2 Milestone 3
22 May 2014

- pts-core: Be more strict in handling DynamicRunCount option
- phoromatic: Cleaning up more of the Phoromatic UI
- phoromatic: Support for updating the system status
- system_monitor: Allow extra idling time at begin and end of testing process
- pts_Graph: Improve formatting of line graph keys
- phodevi: Detection support for KDE Frameworks 5 / Plasma Next desktop

Phoronix Test Suite 5.2 Milestone 2
18 May 2014

- pts-core: Add RUN_TESTS_IN_RANDOM_ORDER environment variable to cause tests to run in a random order
- pts-core: Add sdl2-development to PTS External Dependencies
- pts-core: Fix regression from 5.2m1 that broke some areas of the GUI / web interface
- pts_Graph: Render min/avg/max stats at top of line graphs (thanks to mufasa72)

Phoronix Test Suite 5.2 Milestone 1
8 May 2014

- pts-core: Fix for not writing null test result file titles
- pts-core: Fix & improvements to PRESET_OPTIONS environment variable
- pts-core: Rename old/legacy phoromatic module to phoromaric_legacy
- pts-core: Allow a range of test run options to be inputted (e.g. 2-5) to complement just a single test option or delimited by commas